// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextPlaceholder should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="root uui-text-placeholder"
  >
    <span
      class="loadingWord animatedLoading"
    >
                   
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextPlaceholder should be rendered correctly 2`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="root uui-text-placeholder"
  >
    <span
      class="loadingWord"
    >
                   
    </span>
    <span
      class="loadingWord"
    >
                   
    </span>
    <span
      class="loadingWord"
    >
                   
    </span>
    <span
      class="loadingWord"
    >
                   
    </span>
    <span
      class="loadingWord"
    >
                   
    </span>
  </div>
</DocumentFragment>
`;
